--- a/SpringProjects/MVC/pom.xml
+++ b/SpringProjects/MVC/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.7.5</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.codingdojo.okimujiform</groupId>
-	<artifactId>OkimujiForm</artifactId>
+	<groupId>com.codingdojo.mvc</groupId>
+	<artifactId>MVC</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>OkimujiForm</name>
+	<name>MVC</name>
 	<description>Okimujiproject</description>
 	<properties>
 		<java.version>17</java.version>
@@ -20,46 +20,29 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
-		<!-- We added in these two dependencies below -->
-		
+
+
 		<dependency>
-                <groupId>org.apache.tomcat.embed</groupId>
-                <artifactId>tomcat-embed-jasper</artifactId>
-        </dependency>
-        <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>jstl</artifactId>
-        </dependency>
-        
-        <dependency>
-	        <groupId>org.webjars</groupId>
-	        <artifactId>webjars-locator</artifactId>
-	        <version>0.30</version>
-	    </dependency>
-	    
-
-	    
-	    <!-- BOOTSTRAP DEPENDENCIES -->
-	    <dependency>
-	        <groupId>org.webjars</groupId>
-	        <artifactId>bootstrap</artifactId>
-	        <version>5.0.1</version>
-	    </dependency>
-	    <dependency>
-	        <groupId>org.webjars</groupId>
-	        <artifactId>jquery</artifactId>
-	        <version>3.6.0</version>
-	    </dependency>
-
-
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-validation</artifactId>
+	    </dependency>  
+		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.mysql</groupId>
+			<artifactId>mysql-connector-j</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
