--- a/SpringProjects/RenderingBooks/src/main/resources/application.properties
+++ b/SpringProjects/RenderingBooks/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+spring.mvc.view.prefix=/WEB-INF/
+
+
 spring.datasource.url=jdbc:mysql://localhost:3306/book-schema
 spring.datasource.username=root
 spring.datasource.password=rootroot
