--- a/SpringProjects/ProjectManager/pom.xml
+++ b/SpringProjects/ProjectManager/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.5</version>
+		<version>2.7.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.codingdojo.bookclub</groupId>
-	<artifactId>BookClub</artifactId>
+	<groupId>com.codingdojo.projectmanager</groupId>
+	<artifactId>ProjectManager</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>BookClub</name>
+	<name>ProjectManager</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
