--- a/SpringProjects/rand-1/pom.xml
+++ b/SpringProjects/rand-1/pom.xml
@@ -5,14 +5,14 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.5</version>
+		<version>2.7.8</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.codingdojo.bookclub</groupId>
-	<artifactId>BookClub</artifactId>
+	<groupId>com.codingdojo.productmanager</groupId>
+	<artifactId>rand-1</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>BookClub</name>
+	<name>rand-1</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
@@ -26,45 +26,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-		
-		<!-- We added in these two dependencies below -->
-		
-		<dependency>
-                <groupId>org.apache.tomcat.embed</groupId>
-                <artifactId>tomcat-embed-jasper</artifactId>
-        </dependency>
-        <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>jstl</artifactId>
-        </dependency>
-        
-        <dependency>
-	        <groupId>org.webjars</groupId>
-	        <artifactId>webjars-locator</artifactId>
-	        <version>0.30</version>
-	    </dependency>
-	    <dependency>
-	        <groupId>org.springframework.boot</groupId>
-	        <artifactId>spring-boot-starter-validation</artifactId>
-	    </dependency>  
-	    <dependency>
-			<groupId>org.mindrot</groupId>
-            <artifactId>jbcrypt</artifactId>
-            <version>0.4</version>
-		</dependency>
-
-	    
-	    <!-- BOOTSTRAP DEPENDENCIES -->
-	    <dependency>
-	        <groupId>org.webjars</groupId>
-	        <artifactId>bootstrap</artifactId>
-	        <version>5.0.1</version>
-	    </dependency>
-	    <dependency>
-	        <groupId>org.webjars</groupId>
-	        <artifactId>jquery</artifactId>
-	        <version>3.6.0</version>
-	    </dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
