--- a/SpringProjects/ChoreTracker/src/main/resources/application.properties
+++ b/SpringProjects/ChoreTracker/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+spring.mvc.view.prefix=/WEB-INF/
 
+
+spring.datasource.url=jdbc:mysql://localhost:3306/chore_schema
+spring.datasource.username=root
+spring.datasource.password=rootroot
+spring.jpa.hibernate.ddl-auto=update
+
+spring.mvc.hiddenmethod.filter.enabled=true
