--- a/SpringProjects/Auth/pom.xml
+++ b/SpringProjects/Auth/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.7.7</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.codingdojo.choretracker</groupId>
-	<artifactId>ChoreTracker</artifactId>
+	<groupId>com.codingdojo.auth</groupId>
+	<artifactId>Auth</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>ChoreTracker</name>
+	<name>Auth</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
@@ -29,35 +29,36 @@
 		
 		<!-- We added in these two dependencies below -->
 		
-		<dependency>
-                <groupId>org.apache.tomcat.embed</groupId>
-                <artifactId>tomcat-embed-jasper</artifactId>
-        </dependency>
-        <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>jstl</artifactId>
-        </dependency>
-        
-        <dependency>
+		 <dependency>
+	        <groupId>org.apache.tomcat.embed</groupId>
+	        <artifactId>tomcat-embed-jasper</artifactId>
+	    </dependency>
+	    <dependency>
+	        <groupId>javax.servlet</groupId>
+	        <artifactId>jstl</artifactId>
+	    </dependency>
+	    <dependency>
 	        <groupId>org.webjars</groupId>
 	        <artifactId>webjars-locator</artifactId>
 	        <version>0.30</version>
 	    </dependency>
 	    <dependency>
+		<groupId>javax.validation</groupId>
+		<artifactId>validation-api</artifactId>
+	    </dependency>
+	    <dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-validation</artifactId>
+	    </dependency>
+	    <dependency>
 	        <groupId>org.springframework.boot</groupId>
-	        <artifactId>spring-boot-starter-validation</artifactId>
-	    </dependency>  
+	        <artifactId>spring-boot-starter-security</artifactId>
+	    </dependency>
 	    <dependency>
 			<groupId>org.mindrot</groupId>
             <artifactId>jbcrypt</artifactId>
             <version>0.4</version>
 		</dependency>
-		<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
-	    </dependency>
-	    
-
 	    
 	    <!-- BOOTSTRAP DEPENDENCIES -->
 	    <dependency>
@@ -70,7 +71,6 @@
 	        <artifactId>jquery</artifactId>
 	        <version>3.6.0</version>
 	    </dependency>
-
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
